Blender 2.8 crash with modifier stack + separate by selection #56258

Closed
opened 2018-08-07 03:28:32 +02:00 by Jesse Yurkovich · 5 comments

System Information
Win10 nVidia Quadro

Blender Version
Broken: 2.8 faf43ff9ad
Worked: (optional)

Short description of error
When there's multiple modifiers in the stack and you attempt to "separate by selection" the last piece of a mesh, you'll get a crash

Exact steps for others to reproduce the error

  • Load attached blend (a Plane, with sub-d + solidify mods, knife'd into 5 pieces)
    • Also repros with solidify + bevel (all at default settings)
  • Select a piece and "Separate by selection"
  • Do this for all 5 pieces (crashes once you try the 5th piece)
BLI_assert(origindex_edge != NULL);
blender.exe!applyModifier(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 777	C
blender.exe!modifier_applyModifier_DM_deprecated(ModifierData * md, const ModifierEvalContext * ctx, DerivedMesh * dm) Line 1171	C
blender.exe!modwrap_applyModifier(ModifierData * md, const ModifierEvalContext * ctx, DerivedMesh * dm) Line 840	C
blender.exe!editbmesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, unsigned __int64 dataMask, DerivedMesh * * r_cage, DerivedMesh * * r_final) Line 2717	C
blender.exe!editbmesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * obedit, BMEditMesh * em, unsigned __int64 dataMask) Line 3001	C
blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, unsigned __int64 dataMask, const bool build_shapekey_layers) Line 3058	C
blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 203	C
blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 313	C
blender.exe!std::_Invoker_functor::_Call<void (__cdecl*&)(Depsgraph *,Scene *,Object *),Depsgraph *,Scene * &,Object * &>(void(*)(Depsgraph *, Scene *, Object *) & _Obj, Depsgraph * && <_Args_0>, Scene * & <_Args_1>, Object * & <_Args_2>)	C++

crash.blend

**System Information** Win10 nVidia Quadro **Blender Version** Broken: 2.8 faf43ff9ad8 Worked: (optional) **Short description of error** When there's multiple modifiers in the stack and you attempt to "separate by selection" the last piece of a mesh, you'll get a crash **Exact steps for others to reproduce the error** - Load attached blend (a Plane, with sub-d + solidify mods, knife'd into 5 pieces) - Also repros with solidify + bevel (all at default settings) - Select a piece and "Separate by selection" - Do this for all 5 pieces (crashes once you try the 5th piece) ``` BLI_assert(origindex_edge != NULL); ``` ``` blender.exe!applyModifier(ModifierData * md, const ModifierEvalContext * ctx, Mesh * mesh) Line 777 C blender.exe!modifier_applyModifier_DM_deprecated(ModifierData * md, const ModifierEvalContext * ctx, DerivedMesh * dm) Line 1171 C blender.exe!modwrap_applyModifier(ModifierData * md, const ModifierEvalContext * ctx, DerivedMesh * dm) Line 840 C blender.exe!editbmesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, unsigned __int64 dataMask, DerivedMesh * * r_cage, DerivedMesh * * r_final) Line 2717 C blender.exe!editbmesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * obedit, BMEditMesh * em, unsigned __int64 dataMask) Line 3001 C blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, unsigned __int64 dataMask, const bool build_shapekey_layers) Line 3058 C blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 203 C blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 313 C blender.exe!std::_Invoker_functor::_Call<void (__cdecl*&)(Depsgraph *,Scene *,Object *),Depsgraph *,Scene * &,Object * &>(void(*)(Depsgraph *, Scene *, Object *) & _Obj, Depsgraph * && <_Args_0>, Scene * & <_Args_1>, Object * & <_Args_2>) C++ ``` [crash.blend](https://archive.blender.org/developer/F4142040/crash.blend)
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by f707984743

This issue was referenced by f70798474357bb64d75aeeb14e2ba7e2d12ac881

Added subscriber: @Divan4ik

Added subscriber: @Divan4ik
Alexey self-assigned this 2019-02-22 22:00:20 +01:00

This comment was removed by @Divan4ik

*This comment was removed by @Divan4ik*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56258
No description provided.