Fix T56258: Solidify assert w/ empty mesh