source/blender/modifiers/intern/MOD_solidify.c
@@ -774,7 +774,7 @@ static Mesh *applyModifier(
 
 		/* add faces & edges */
 		origindex_edge = CustomData_get_layer(&result->edata, CD_ORIGINDEX);
-		BLI_assert(origindex_edge != NULL);
+		BLI_assert((numEdges == 0) || (origindex_edge != NULL));
 		ed = &medge[(numEdges * stride) + newEdges];  /* start after copied edges */
 		orig_ed = &origindex_edge[(numEdges * stride) + newEdges];
 		for (i = 0; i < rimVerts; i++, ed++, orig_ed++) {
